--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,5 +6,35 @@
 }
 
 .addtask{
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-top: 20px; 
+}
+
+.addtask input[type=text]{
+    width: 50%;
+    height: 30px;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid black;
+    font-size: 20px;
+    padding: 20px;
+    color: blue;
+}
+
+.addtask input[type=text]::placeholder{
+    color: red;
+}
+
+.addtask button{
+    width: 10%;
+    padding: 10px 5px;
+    margin-left: 10px;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    cursor: pointer;
+    font-weight: bolder;
     
 }
